--- a/servidor_minecraft/plugins/Geyser-Spigot/locales/es_es.json
+++ b/servidor_minecraft/plugins/Geyser-Spigot/locales/es_es.json
@@ -2553,6 +2553,7 @@
     "commands.data.storage.modified": "Se ha modificado el contenedor %s",
     "commands.data.storage.query": "El contenedor %s tiene: %s",
     "commands.datapack.create.already_exists": "Ya existe un paquete con ese nombre: %s",
+    "commands.datapack.create.invalid_full_name": "«%s» no es un nombre de paquete válido",
     "commands.datapack.create.invalid_name": "Caracteres no válidos en el nuevo nombre del paquete: %s",
     "commands.datapack.create.io_failure": "No se ha podido crear un paquete con el nombre «%s», revisa los registros",
     "commands.datapack.create.metadata_encode_failure": "Error al codificar los metadatos del paquete con el nombre «%s»: %s",
@@ -3947,6 +3948,8 @@
     "gui.toWorld": "Volver a la lista de mundos",
     "gui.togglable_slot": "Haz clic para desactivar el espacio",
     "gui.up": "Arriba",
+    "gui.waitingForResponse.button.inactive": "Volver (%ss)",
+    "gui.waitingForResponse.title": "Esperando al servidor",
     "gui.yes": "Sí",
     "hanging_sign.edit": "Editar mensaje del cartel colgante",
     "instrument.minecraft.admire_goat_horn": "Admiración",
@@ -4878,6 +4881,7 @@
     "key.mouse.right": "Clic dcho.",
     "key.pickItem": "Copiar bloque",
     "key.playerlist": "Lista de jugadores",
+    "key.quickActions": "Acciones rápidas",
     "key.right": "Caminar hacia la derecha",
     "key.saveToolbarActivator": "Guardar barra de objetos",
     "key.screenshot": "Hacer captura de pantalla",
@@ -5013,6 +5017,7 @@
     "mco.configure.world.invites.remove.tooltip": "Eliminar",
     "mco.configure.world.leave.question.line1": "Si abandonas este Realm no podrás verlo hasta que te vuelvan a invitar",
     "mco.configure.world.leave.question.line2": "¿Seguro que quieres hacer esto?",
+    "mco.configure.world.loading": "Cargando Realm",
     "mco.configure.world.location": "Ubicación",
     "mco.configure.world.minigame": "Actual: %s",
     "mco.configure.world.name": "Nombre del Realm",
@@ -5151,6 +5156,7 @@
     "mco.notification.visitUrl.buttonText.default": "Abrir enlace",
     "mco.notification.visitUrl.message.default": "Por favor, visita el siguiente enlace",
     "mco.onlinePlayers": "Jugadores en línea",
+    "mco.play.button.realm.closed": "Realm cerrado",
     "mco.question": "Pregunta",
     "mco.reset.world.adventure": "Aventuras",
     "mco.reset.world.experience": "Experiencias",
@@ -5258,7 +5264,7 @@
     "mco.worldSlot.minigame": "Minijuego",
     "menu.custom_options": "Opciones personalizadas...",
     "menu.custom_options.title": "Opciones personalizadas",
-    "menu.custom_options.tooltip": "Nota: Las opciones personalizadas las proporcionan servidores o contenido de terceros.\n¡Manéjalo con cuidado!",
+    "menu.custom_options.tooltip": "Nota: Las opciones personalizadas las proporcionan servidores o contenido de terceros.\n¡Ten cuidado!",
     "menu.custom_screen_info.button_narration": "Esto es una pantalla personalizada. Más información.",
     "menu.custom_screen_info.contents": "El contenido de esta pantalla está controlado por servidores y mapas de terceros que no son propiedad de Mojang Studios ni de Microsoft, ni están operados ni supervisados ​​por ellos.\n\n¡Atención! Ten cuidado al abrir enlaces y nunca compartas tu información personal, incluyendo tus datos de inicio de sesión.\n\nSi esta pantalla te impide jugar, puedes desconectarte del servidor usando el botón de aquí abajo.",
     "menu.custom_screen_info.disconnect": "Pantalla personalizada rechazada",
@@ -5276,6 +5282,8 @@
     "menu.playdemo": "Jugar mundo de demostración",
     "menu.playerReporting": "Denunciar jugador",
     "menu.preparingSpawn": "Preparando zona de aparición: %s %%",
+    "menu.quick_actions": "Acciones rápidas...",
+    "menu.quick_actions.title": "Acciones rápidas",
     "menu.quit": "Cerrar Minecraft",
     "menu.reportBugs": "Informar de error",
     "menu.resetdemo": "Reiniciar mundo de demostración",
@@ -5302,8 +5310,8 @@
     "mirror.none": "|",
     "mount.onboard": "Pulsa %1$s para bajarte",
     "multiplayer.applyingPack": "Aplicando paquete de recursos",
-    "multiplayer.confirm_command.parse_errors": "Estás intentando ejecutar un comando desconocido o no válido.\n¿Estás seguro?\nComando: %s",
-    "multiplayer.confirm_command.permissions_required": "Estás intentando ejecutar un comando que requiere permisos elevados.\nEsto podría afectar negativamente a tu juego.\n¿Estás seguro?\nComando: %s",
+    "multiplayer.confirm_command.parse_errors": "Estás intentando ejecutar un comando desconocido o no válido.\n¿Seguro que quieres hacer eso?\nComando: %s",
+    "multiplayer.confirm_command.permissions_required": "Estás intentando ejecutar un comando que requiere permisos elevados.\nEsto podría afectar negativamente a tu juego.\n¿Seguro que quieres hacer esto?\nComando: %s",
     "multiplayer.confirm_command.title": "Confirmar ejecución del comando",
     "multiplayer.disconnect.authservers_down": "Los servidores de autenticación no funcionan. ¡Lo sentimos! Inténtalo más tarde.",
     "multiplayer.disconnect.bad_chat_index": "Mensaje de chat perdido o reordenado recibido del servidor",
@@ -5683,10 +5691,10 @@
     "options.mouse_settings.title": "Opciones del ratón",
     "options.multiplayer.title": "Ajustes de multijugador...",
     "options.multiplier": "x%s",
-    "options.music_frequency": "Frecuencia de la música",
+    "options.music_frequency": "Frec. de la música",
     "options.music_frequency.constant": "Constante",
     "options.music_frequency.default": "Por defecto",
-    "options.music_frequency.frequent": "Rara vez",
+    "options.music_frequency.frequent": "Frecuente",
     "options.music_frequency.tooltip": "Cambia la frecuencia con la que se reproduce música durante una partida.",
     "options.narrator": "Narrador",
     "options.narrator.all": "Narrar todo",
@@ -6139,6 +6147,7 @@
     "soundCategory.neutral": "Criaturas pacíficas",
     "soundCategory.player": "Jugadores",
     "soundCategory.record": "Bloques musicales",
+    "soundCategory.ui": "Interfaz",
     "soundCategory.voice": "Voces y diálogos",
     "soundCategory.weather": "Clima",
     "spectatorMenu.close": "Cerrar menú",
@@ -6650,9 +6659,9 @@
     "subtitles.entity.ghast.death": "Ghast muere",
     "subtitles.entity.ghast.hurt": "Ghast herido",
     "subtitles.entity.ghast.shoot": "Ghast dispara",
-    "subtitles.entity.ghastling.ambient": "Ghastling arrulla",
+    "subtitles.entity.ghastling.ambient": "Ghast bebé ronronea",
     "subtitles.entity.ghastling.death": "Ghastling muere",
-    "subtitles.entity.ghastling.hurt": "Ghastling se daña",
+    "subtitles.entity.ghastling.hurt": "Ghast bebé herido",
     "subtitles.entity.ghastling.spawn": "Ghastling aparece",
     "subtitles.entity.glow_item_frame.add_item": "Objeto colocado en un marco luminoso",
     "subtitles.entity.glow_item_frame.break": "Marco luminoso se rompe",
@@ -7126,12 +7135,18 @@
     "subtitles.item.hoe.till": "Azada labra",
     "subtitles.item.honey_bottle.drink": "Tragando",
     "subtitles.item.honeycomb.wax_on": "Encerado",
+    "subtitles.item.horse_armor.unequip": "Armadura para caballo se suelta",
     "subtitles.item.ink_sac.use": "Saco de tinta mancha",
+    "subtitles.item.lead.break": "Rienda se rompe",
+    "subtitles.item.lead.tied": "Rienda atada",
+    "subtitles.item.lead.untied": "Rienda desatada",
+    "subtitles.item.llama_carpet.unequip": "Alfombra se suelta",
     "subtitles.item.lodestone_compass.lock": "Brújula imantada a magnetita",
     "subtitles.item.mace.smash_air": "Maza golpea",
     "subtitles.item.mace.smash_ground": "Maza golpea",
     "subtitles.item.nether_wart.plant": "Semilla cultivada",
     "subtitles.item.ominous_bottle.dispose": "Frasco se quiebra",
+    "subtitles.item.saddle.unequip": "Montura se suelta",
     "subtitles.item.shears.shear": "Chasquido de tijeras",
     "subtitles.item.shears.snip": "Tijeras cortan",
     "subtitles.item.shield.block": "Escudo bloquea",
