--- a/servidor_minecraft/plugins/SkinsRestorer/locales/repository/locale_cs.json
+++ b/servidor_minecraft/plugins/SkinsRestorer/locales/repository/locale_cs.json
@@ -3,7 +3,7 @@
   "skinsrestorer.help_skin": "Změní tvůj skin.",
   "skinsrestorer.help_skins": "Otevře GUI skinů.",
   "skinsrestorer.help_sr": "Admin příkazy pro SkinsRestorer.",
-  "skinsrestorer.help_skin_help": "Zobrazí tento příkaz.",
+  "skinsrestorer.help_skin_help": "Zobrazí příkaz nápovědy.",
   "skinsrestorer.help_skin_set": "Změní tvůj skin.",
   "skinsrestorer.help_skin_set_other": "Nastaví skin cílovému hráči.",
   "skinsrestorer.help_skin_set_url": "Změní tvůj skin z URL.",
